# projektSRiR

./: CMakeLists.txt  README.md  nodes
input/: input_10.txt
src/: bellman-ford-gaspi.c
